Updating the Splash screen

--- a/site/index.html
+++ b/site/index.html
@@ -3,17 +3,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Caddy on DigitalOcean</title>
-    <meta name="description" content="Choo Choo!" />
+    <title>Stratum Caddy</title>
+    <meta name="description" content="Stratum" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="/styles.css?v=1.0" />
   </head>
 
   <body>
     <main>
-      <h1>Caddy on DigitalOcean</h1>
+      <h1>Caddy</h1>
       <p>
-        Choo Choo! This is an example of a Caddy static site running on DigitalOcean.
+        The Site is up!
       </p>
     </main>
   </body>
